tests/parser/invalidinput/checksortsindef.idp
vocabulary V {
	type A
	P(A)
}

theory T : V {
	{ P(1). }
}

structure S : V {
	A = { 1..9 }
}